Add simple docs server

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,9 +2,9 @@
 // Harvest Profit colors
 
 // Colors
-$black: '#000'    !default;
-$blue:  '#2F6690' !default;
-$green: '#2D8545' !default;
-$grey:  '#444'    !default;
-$red:   '#B51F21' !default;
-$white: '#fff'    !default;
+$black: #000      !default;
+$blue:  #2f6690   !default;
+$green: #2d8545   !default;
+$grey:  #444      !default;
+$red:   #b51f21   !default;
+$white: #fff      !default;
