--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,6 +3,7 @@ $fa-font-path: '../node_modules/font-awesome/fonts';
 
 @import 'variables';
 @import 'Button';
+@import  'Filters';
 @import 'forms/Dropdown';
 @import 'forms/Input';
 @import 'forms/Switch';
