--- a/scss/index.scss
+++ b/scss/index.scss
@@ -10,6 +10,7 @@ $fa-font-path: '../node_modules/font-awesome/fonts';
 @import 'layout/Header';
 @import 'Table';
 @import 'Modal';
+@import 'Panel';
 
 body {
   font-family: "Open Sans", sans-serif;
