--- a/scss/index.scss
+++ b/scss/index.scss
@@ -11,6 +11,10 @@ $fa-font-path: '../node_modules/font-awesome/fonts';
 @import 'Table';
 @import 'Modal';
 @import 'Panel';
+@import 'Form';
+@import 'Row';
+@import 'Column';
+@import 'Error';
 
 body {
   font-family: "Open Sans", sans-serif;
