--- a/scss/Panel.scss
+++ b/scss/Panel.scss
@@ -1,6 +1,7 @@
 @import './ColorPallet';
 $panel-v2-title-color: $light-white;
 $panel-v2-title-text-color: $dark-grey;
+$panel-v2-subtitle-text-color: $light-grey;
 $panel-v2-body-color: $light-white;
 $panel-v2-box-shadow-color: rgba($true-black, 0.1);
 $panel-v2-contents-color: $true-white;
@@ -22,6 +23,15 @@ $panel-v2-contents-color: $true-white;
     padding: 16px;
     text-transform: uppercase;
     width: 100%;
+
+    & > small {
+      color: $panel-v2-subtitle-text-color;
+      font-weight: normal;
+      margin: 2px 0 0;
+      display: block;
+      font-size: 12px;
+      text-transform: none;
+    }
   }
 
   & > div.content {
