--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,7 +6,6 @@ $fa-font-path: '../node_modules/font-awesome/fonts';
 @import  'Filters';
 @import 'forms/Dropdown';
 @import 'forms/Input';
-@import 'forms/Switch';
 @import 'layout/Header';
 @import 'Table';
 @import 'Modal';
@@ -15,6 +14,7 @@ $fa-font-path: '../node_modules/font-awesome/fonts';
 @import 'Row';
 @import 'Column';
 @import 'Error';
+@import 'Switch';
 
 body {
   font-family: "Open Sans", sans-serif;
