--- a/scss/index.scss
+++ b/scss/index.scss
@@ -15,6 +15,8 @@ $fa-font-path: '../node_modules/font-awesome/fonts';
 @import 'Column';
 @import 'Error';
 @import 'Switch';
+@import 'TabSwitcher';
+@import 'Divider';
 
 body {
   font-family: "Open Sans", sans-serif;
