--- a/scss/index.scss
+++ b/scss/index.scss
@@ -22,6 +22,7 @@ $fa-font-path: '../node_modules/font-awesome/fonts';
 @import 'Column';
 @import 'Error';
 @import 'Switch';
+@import 'LabelValue';
 
 body {
   font-family: "Open Sans", sans-serif;
